--- a/tests/Languages/en-1.json
+++ b/tests/Languages/en-1.json
@@ -1,3 +1,5 @@
 {
-  "example": "This is a test value."
+  "example1": "This is a test value.",
+  "example2": "This is a test value.",
+  "example3": "This is a test value."
 }
